<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="chat_header">Conversations</string>
    <string name="app_name">SpeedSwede</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="facebook_app_id">616859141821100</string>
    <string name="fb_login_protocol_scheme">fb616859141821100</string>

    <string name="hint_message_input_field">Write a message...</string>

    <string name="start_matching_text">New chat</string>
    <string name="looking_for_match">Looking for a chat...</string>
    <string name="block_user">Block user</string>
    <string name="confirm_block_user">Block user?</string>

    <string name="settings_show_actions">Show actions</string>

    <string name="change_language">Change language</string>

    <string name="activity_settings_title">Settings</string>

    <string name="settings_pref_notifications">Notifications</string>
    <string name="settings_summary_notifications">Choose whether you want to be notified when new chat messages or matches appear.</string>
    <string name="settings_pref_app_lang">App Language</string>
    <string name="settings_pref_app_lang_default">English</string>
    <string name="exit_chat">Leave chat</string>
    <string name="change_chat_name">Change chat name</string>
    <string name="remove_settings">remove settings</string>
    <string name="settings_pref_usage">How do you want to use this app?</string>
    <string name="settings_pref_usage_default">learn</string>
    <string name="settings_pref_first_login_continue_text">continue</string>

    <string name="settings_pref_usage_entry_learn">I want to learn</string>
    <string name="settings_pref_usage_entry_mentor">I want to mentor</string>
    <string name="settings_pref_usage_entry_chat">I just want to chat</string>
    
    <string name="change_name">Change name</string>
    <string name="cancel">Cancel</string>
    <string name="chatname_here">Chat name here</string>
    <string name="chat_name_error">Empty name not allowed!</string>
    <string name="enter_chatname">Enter chat name</string>
    <string name="activity_login_text">Log in using your Facebook account to get started!</string>
    <string name="language_skills">Language skills</string>
    <string name="languages">Languages</string>
    <string name="other">Other</string>
    <string name="confirm_action">Confirm</string>
    <string name="topic_image_description">topic image</string>

    <string name="chosen_language">English</string>
    <string name="exit_chat_text">You will not be able to come back to it.</string>
    <string name="block_user_text">You will not be matched with him or her again.</string>
</resources>