<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/blockUser"
        android:title="@string/block_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <item android:id="@+id/changeLangauge"
        android:title="@string/change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <item android:id="@+id/exitChat"
        android:title="@string/exit_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <item android:id="@+id/changeChatName"
        android:title="@string/change_chat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <item android:id="@+id/removeSettings"
        android:title="@string/remove_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</menu>