<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.zweigbergk.speedswede.fragment.DialogFragment">

    <Button
        android:background="#FFFFFF"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/change_name"
        android:id="@+id/changeNameBtn"
        android:layout_below="@+id/chatNameText"
        android:layout_alignLeft="@+id/chatNameText"
        android:layout_alignStart="@+id/chatNameText" />

    <EditText
        android:hint="@string/enter_chatname"
        android:gravity="center"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chatname_here"
        android:id="@+id/chatNameText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="#FFFFFF"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelBtn"
        android:layout_below="@+id/chatNameText"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

